# bob-the-ai

./: .gitmodules  Dockerfile  SYSTEM_PROMPT.md  agent.py  bob.py  config.py  docker-compose.yaml  example.env.txt  loop.py  pyproject.toml  server.py  state.py  user.py
search_tool/: __init__.py  firecrawl.py  search.py  searxng.py  wolfram.py
tools/: __init__.py  filesystem.py  graphrag.py  modify_system_prompt.py  request_user_input.py  say.py  search.py  shell.py  wolfram.py
