[project]
name = "bob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-graph-retriever>=0.8.0",
    "langchain-openai>=1.1.6",
    "requests>=2.32.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.2.0",
    "graph-retriever>=0.3.0",
    "rich>=14.2.0",
    "textual>=7.0.0",
]
